--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>second-brain-frontend</title>
+    <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
   </head>
-  <body>
+  <body class="bg-[#f9f9f9]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
